[package]
name = "unixlab-code-share"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "unixlab-code-share"
path = "src/main.rs"

[dependencies]
actix = "0.13"
actix-files = "0.6"
actix-web = "4.4"
actix-web-actors = "4.1"


env_logger = "0.10"
log = "0.4"
openssl = { version = "0.10.55", features = ["v110"] }
rand = "0.8"